--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,13 +2,13 @@
 
 <div id="body" class="ui-g">
     <div class="ui-g-12 ui-md-12 ui-lg-2">
-        <app-side-filter></app-side-filter>
+        <app-side-filter (selectedFilter)="changeFilter($event)"></app-side-filter>
     </div>
     <div class="ui-g-12 ui-md-12 ui-lg-10">
         <div class="section-adote">
             <div class="title ng-scope">ADOTE!</div>
                 <div class="row adote">
-                    <app-animals-view></app-animals-view>
+                    <app-animals-view [animals]="animals"></app-animals-view>
                 </div>                    
         </div>
     </div>
