feat: Ajusta email

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,7 +21,7 @@
                     </ul>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-9">
-                    <p class="detail">miaudote@gmail.com</p>
+                    <p class="detail">contato@miaudote.com.br</p>
                   </div> 
               </div>
             </div>
