--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -1,13 +1,13 @@
 .title{
     font-style: italic;
     font-weight: bold;
-    font-size: 50px;
-    font-family: Apple Chancery;
+    font-size: 40px;
+    font-family: Bradley Hand, cursive;
     text-align: center;
 }
 
 .detail{
-    font-size: 25px;
+    font-size: 20px;
     font-family:Bradley Hand, cursive;
 }
 
