--- a/src/app/components/how-to-adopt/how-to-adopt.component.html
+++ b/src/app/components/how-to-adopt/how-to-adopt.component.html
@@ -10,7 +10,7 @@
             <p class="detail">O animal requer atenção e possui necessidades que devem ser compreendidas.</p> 
             <p class="detail">Por isso tenha certeza da decisão, converse com familiares (caso seja o caso) antes de adotar.</p>
             
-            <h2>Requisitos para adoção:</h2>
+            <h2 class="title">Requisitos para adoção:</h2>
             <b class="detail">**Essas informações dependem da ONG**</b>
             <p class="detail">-Ser maior de 18 anos ou estar acompanhado por um responsável.</p>
             <p class="detail">-Identidade e CPF(original e cópia).</p>
