--- a/src/app/components/how-to-adopt/how-to-adopt.component.scss
+++ b/src/app/components/how-to-adopt/how-to-adopt.component.scss
@@ -2,7 +2,7 @@
     font-style: italic;
     font-weight: bold;
     font-size: 40px;
-    font-family: Apple Chancery;
+    font-family: Bradley Hand, cursive;
     text-align: center;
 }
 
