--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -1,19 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark black-menu">
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <a class="navbar-brand">
-            <img src="../../../assets/logo/logomiaudote.png" width="30" height="35" />
-        </a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li *ngFor="let item of items" class="nav-item">
-                <a class="nav-link" (click)="navigate(item.route)">{{ item.label }}</a>
-            </li>
-        </ul>
+    <button type="button" class="navbar-toggler" (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed" aria-controls="collapseEvent">
+        <span class="fa fa-bars"></span>
+    </button> 
+    <div id="collapseEvent" [isAnimated]="true" [collapse]="isCollapsed">
+        <div class="navbar-collapse" id="navbarSupportedContent">
+            <div class="row">
+                <div class="col-md-auto">
+                    <a class="navbar-brand">
+                        <img src="../../../assets/logo/logomiaudote.png" width="30" height="35" />
+                    </a>
+                </div>
+                <div class="col-md-auto">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li *ngFor="let item of items" class="nav-item">
+                            <a class="nav-link" (click)="navigate(item.route)">{{ item.label }}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-
 </nav>
